# ZaroPGx

./: .condarc  .cursorignore  .cursorrules  .dockerignore  .env.example  .env.local  .env.production  .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  NOTICE  PROGRESS.md  README.md  README_CONVERSION.md  app_logs.txt  bootstrap.ps1  bootstrap.sh  conversion_summary.md  create_sample.py  debug_aldy.sh  directory_structure.txt  docker-compose.yml  docker-compose.yml.example  docker-composeLOCAL.yml  fhir error.md  files_to_delete.txt  fix_pypgx.sh  header_example.txt  improved_report.json  index(old).html  page.html  pgx_report_sample.html  pharmcat_consolidation.md  psychiatric_pharmacogenomics_panel.md  pyproject.toml  pyproject.toml.bak  requirements.txt  setup_reference_genomes.sh  start-docker.ps1  (+6 more)
.github/workflows/: render-diagrams.yml
alembic/: env.py  script.py.mako
alembic.old/versions/: 0001_enable_builtin_extensions.py
alembic/versions/: 0002_enable_postbio_poststat_placeholders.py  0003_genomic_file_headers.py
app/: main.py  main.py.bak
app/api/: db.py  dependencies.py  models.py
app/core/: version_manager.py
app/pharmcat/: pharmcat_client.py  pharmcat_parser.py
app/pharmcat_wrapper/: pharmcat_client.py
app/reports/: fhir_client.py  generator.py  pdf_generators.py  pharmcat_tsv_parser.py  pypgx_pipeline_parser.py
app/services/: cleanup_service.py  fhir_export_service.py  job_status_service.py  nextflow_monitor.py  pharmcat_data_service.py  websocket_manager.py  workflow_progress_calculator.py  workflow_service.py  workflow_stage_manager.py
app/templates/: index.html
app/utils/: allele_translate.py  build_allele_mapping.py  workflow_client.py
app/visualizations/: README.md  workflow.md  workflow.mmd  workflow_diagram.py
config/: genes.json
data/: sample_cpic.vcf.bgz.csi
data/versions/: about.md  gatk.json  hapi.json  optitype.json  pharmcat.json  (+2 more)
db/: README.md
docs/: .gitignore  Makefile  advanced-configuration.md  architecture.md  conf.py  getting-started.md  index.md  quick-start-quide.md  requirements.txt  to-do.md
lexicon/: allele-table.csv  gene-table.csv  phenotype-table.csv
scripts/: db-backup.sh  db-restore.sh  workflow-api.sh
test_data/: NA12878.mini.bam  README.md  pharmcat.example2.vcf  pharmcat_example.vcf  test.bam  test.vcf  test_tsv_parser.py
visualizations/: README.md  workflow.md  workflow.mmd
(+113 files in other folders)
