[tool.poetry]
name = "zaropgx"
version = "0.1.0"
description = "Pharmacogenomic Analysis Pipeline using GATK, Stargazer and PharmCAT"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"
alembic = "^1.10.2"
pandas = "^2.0.0"
numpy = "^1.24.2"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
weasyprint = "^52.5"
jinja2 = "^3.1.2"
pdfkit = "^1.0.0"
requests = "^2.28.2"
httpx = "^0.23.3"
aiofiles = "^23.1.0"
aiohttp = "^3.8.0"
biopython = "^1.81"  # Common for bioinformatics

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 