## PEP 621 project metadata for uv
[project]
name = "zaropgx"
version = "0.1.0"
description = "Pharmacogenomic Analysis Pipeline using GATK, PyPGx and PharmCAT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
  { name = "Iliya Yaroshevskiy", email = "ilya.yaroshevskiy@gmail.com" }
]

dependencies = [
  # Web and ASGI
  "fastapi>=0.95.0,<1.0.0",
  "uvicorn>=0.21.1,<1.0.0",
  "python-multipart>=0.0.6,<1.0.0",

  # Auth and security
  "python-jose>=3.3.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "bcrypt>=4.0.1,<5.0.0",

  # Database
  "sqlalchemy>=2.0.7,<3.0.0",
  "psycopg2-binary>=2.9.5,<3.0.0",
  "alembic>=1.10.2,<2.0.0",

  # Data processing
  "pandas>=2.0.0,<3.0.0",
  "numpy>=1.24.2,<2.0.0",
  "pydantic>=1.10.7,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",

  # Reporting
  "weasyprint>=52.5,<53.0",
  "jinja2>=3.1.2,<4.0.0",
  "pdfkit>=1.0.0,<2.0.0",

  # HTTP and async utilities
  "requests>=2.28.2,<3.0.0",
  "httpx>=0.23.3,<1.0.0",
  "aiofiles>=23.1.0,<24.0.0",
  "aiohttp>=3.8.0,<4.0.0",

  # Bioinformatics
  "biopython>=1.81,<2.0.0",

  # Additional utilities (from requirements.txt)
  "starlette",
  "sse-starlette",
  "werkzeug",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "flake8",
  "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"